--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bignumber.js": "^9.1.2",
 		"chart.js": "^4.4.1",
 		"chartjs-plugin-zoom": "^2.0.1",
 		"dayjs": "^1.11.10",
